--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2140,4 +2140,7 @@
   <!-- Screenshort Trash -->
   <java-symbol type="string" name="trash" />
 
+  <!-- Package Manager -->
+  <java-symbol type="array" name="config_disabledComponents" />
+
 </resources>
