--- a/packages/SystemUI/res/layout-port/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout-port/status_bar_recent_panel.xml
@@ -68,74 +68,28 @@
 
         </com.android.systemui.recent.RecentsVerticalScrollView>
 
-                <FrameLayout
-                     android:layout_width="50dp"
-                     android:layout_height="50dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_gravity="bottom|left" >
+    <FrameLayout android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_gravity="bottom|left" >
 
-                    <com.android.systemui.recent.CircleMemoryMeter
-                        android:id="@+id/circle_meter"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
- 
-                    <ImageView
-                        android:id="@+id/recents_kill_all"
-                        android:clickable="true"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="10dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_recents_clear" />
-                </FrameLayout> 
-
-    <view class="com.android.systemui.recent.LinearColorBar"
-            android:id="@+id/ram_usage_bar"
+    <com.android.systemui.recent.CircleMemoryMeter
+            android:id="@+id/circle_meter"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-5dp"
-            android:orientation="horizontal"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:paddingTop="30dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:paddingBottom="1dp"
-            android:layout_marginLeft="@*android:dimen/preference_fragment_padding_side"
-            android:layout_marginRight="@*android:dimen/preference_fragment_padding_side">
-        <TextView android:id="@+id/foregroundText"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:focusable="true"
-            android:gravity="left|bottom"
-            android:textAppearance="?android:attr/textAppearanceSmallInverse"
-            android:textColor="#000"
-            android:singleLine="true" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:layout_marginTop="-20dp"
-            android:textAppearance="?android:attr/textAppearanceSmallInverse"
-            android:textColor="#ccc"
-            android:shadowColor="#000"
-            android:shadowRadius="5"
-            android:textStyle="bold"
-            android:singleLine="true"
-            android:text="@string/memory" />
-        <TextView android:id="@+id/backgroundText"
-            android:layout_gravity="center_vertical|right"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:focusable="true"
-            android:gravity="right|bottom"
-            android:textAppearance="?android:attr/textAppearanceSmallInverse"
-            android:textColor="#000"
-            android:singleLine="true" />
-    </view>
+            android:layout_height="match_parent" />
+ 
+    <ImageView android:id="@+id/recents_kill_all"
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_recents_clear" />
+
+    <include layout="@layout/aokp_recents_rambar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     </FrameLayout>
 
